# BrogueCE

./: .gitignore  CMakeLists.txt  CMakeSettings.json
.github/workflows/: build.yml
macos/: sdl2.rb
src/: CMakeLists.txt
src/platform/: main.c  platformdependent.c  sdl2-platform.c
